--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,18 +30,23 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  flutter_localizations:
+    sdk: flutter
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   http: ^1.2.2
-  flutter_html: ^2.2.1
+  #flutter_html: ^2.2.1
   #hb_check_code: ^0.0.2
   font_awesome_flutter: ^10.7.0
   flutter_tts: ^4.0.2
   chewie_audio: ^1.5.0
   video_player: ^2.9.1
+  intl: ^0.19.0
+  url_launcher: ^6.3.0
+  flutter_localization: ^0.2.2
+  flutter_launcher_icons: ^0.13.1
 
 dev_dependencies:
   flutter_test:
@@ -56,7 +61,10 @@ dev_dependencies:
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
-
+flutter_launcher_icons:
+  android:true
+  ios:true
+  image_path:"images/logo_yachaq.png"
 # The following section is specific to Flutter packages.
 flutter:
 
@@ -69,7 +77,8 @@ flutter:
   # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
-
+  assets:
+    - images/
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
 
